vA1.1 Fixing subnav jumping

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@
   
   /* SUBNAV BAR */
   .subnav-bar {
-    position: fixed;
+    position: absolute;
     top: 64px;
     left: 0;
     width: 100%;
